// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getUserCreatedPRListInPeriod > filters pull requests that target a specific branch 1`] = `
[
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2024-09-14 22:43:03",
    "labels": [
      "docs",
      "regression 🐛",
      "v5.x",
    ],
    "mergedAt": "2024-09-16 20:17:55",
    "number": 43753,
    "reviewers": [
      "siriwatknp",
    ],
    "targetBranch": "v5.x",
    "title": "[docs] Fix MUI Treasury Layout broken links",
    "url": "https://github.com/mui/material-ui/pull/43753",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
      "oliviertassinari",
    ],
    "createdAt": "2024-09-14 23:15:20",
    "labels": [
      "bug 🐛",
      "examples",
      "v5.x",
    ],
    "mergedAt": "2024-10-03 20:40:08",
    "number": 43755,
    "reviewers": [
      "mnajdova",
    ],
    "targetBranch": "v5.x",
    "title": "[examples] Fix v5 clone example instructions",
    "url": "https://github.com/mui/material-ui/pull/43755",
  },
]
`;

exports[`getUserCreatedPRListInPeriod > returns pull requests created by the user within the specified date range 1`] = `
[
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-01 09:27:00",
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergedAt": "2025-05-06 08:41:19",
    "number": 46051,
    "reviewers": [
      "Janpot",
      "jedwards1211",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-02 22:29:40",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-07 00:03:19",
    "number": 46061,
    "reviewers": [
      "nadjakovacev",
    ],
    "targetBranch": "master",
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-03 23:05:12",
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-06 02:27:16",
    "number": 46064,
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-04 00:34:05",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-08 02:54:29",
    "number": 46065,
    "reviewers": [
      "mapache-salvaje",
    ],
    "targetBranch": "master",
    "title": "[website] Fix CSS alignment",
    "url": "https://github.com/mui/material-ui/pull/46065",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mapache-salvaje",
      "mui-bot",
      "oliviertassinari",
    ],
    "createdAt": "2025-05-06 07:16:02",
    "labels": [
      "docs",
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-08 05:47:34",
    "number": 46090,
    "reviewers": [
      "mapache-salvaje",
    ],
    "targetBranch": "master",
    "title": "[docs] Remove oudated scaffoldhub ad",
    "url": "https://github.com/mui/material-ui/pull/46090",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-13 03:54:56",
    "labels": [
      "docs",
    ],
    "mergedAt": "2025-05-15 16:27:18",
    "number": 46135,
    "reviewers": [
      "0210shivam",
      "ZeeshanTamboli",
    ],
    "targetBranch": "master",
    "title": "[docs] Fix GridLegacy docs order",
    "url": "https://github.com/mui/material-ui/pull/46135",
  },
]
`;

exports[`getUserCreatedPRListInPeriodByLabel > filters pull requests that exactly match provided label names (case-sensitive) 1`] = `
[
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-03 23:05:12",
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-06 02:27:16",
    "number": 46064,
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mapache-salvaje",
      "mui-bot",
      "oliviertassinari",
    ],
    "createdAt": "2025-05-06 07:16:02",
    "labels": [
      "docs",
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-08 05:47:34",
    "number": 46090,
    "reviewers": [
      "mapache-salvaje",
    ],
    "targetBranch": "master",
    "title": "[docs] Remove oudated scaffoldhub ad",
    "url": "https://github.com/mui/material-ui/pull/46090",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-13 03:54:56",
    "labels": [
      "docs",
    ],
    "mergedAt": "2025-05-15 16:27:18",
    "number": 46135,
    "reviewers": [
      "0210shivam",
      "ZeeshanTamboli",
    ],
    "targetBranch": "master",
    "title": "[docs] Fix GridLegacy docs order",
    "url": "https://github.com/mui/material-ui/pull/46135",
  },
]
`;

exports[`getUserCreatedPRListInPeriodByLabel > filters pull requests that include provided label keywords (case-insensitive, partial match) 1`] = `
[
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-01 09:27:00",
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergedAt": "2025-05-06 08:41:19",
    "number": 46051,
    "reviewers": [
      "Janpot",
      "jedwards1211",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-02 22:29:40",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-07 00:03:19",
    "number": 46061,
    "reviewers": [
      "nadjakovacev",
    ],
    "targetBranch": "master",
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-bot",
    ],
    "createdAt": "2025-05-04 00:34:05",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-08 02:54:29",
    "number": 46065,
    "reviewers": [
      "mapache-salvaje",
    ],
    "targetBranch": "master",
    "title": "[website] Fix CSS alignment",
    "url": "https://github.com/mui/material-ui/pull/46065",
  },
]
`;

exports[`getUserPRListByCreationAndParticipation > returns pull requests the user has participated in (via comments or reviews) within the specified period 1`] = `
{
  "userCreatedPRList": [
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-20 00:27:07",
      "labels": [
        "component: modal",
        "docs",
      ],
      "mergedAt": "2019-08-21 17:53:23",
      "number": 17059,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Modal] Add transition documentation",
      "url": "https://github.com/mui/material-ui/pull/17059",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-20 00:37:03",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-20 18:20:23",
      "number": 17060,
      "reviewers": [
        "mbrookes",
      ],
      "targetBranch": "master",
      "title": "[docs] Small changes",
      "url": "https://github.com/mui/material-ui/pull/17060",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-20 00:38:26",
      "labels": [
        "core",
      ],
      "mergedAt": "2019-08-21 17:52:48",
      "number": 17061,
      "reviewers": [
        "joshwooding",
      ],
      "targetBranch": "master",
      "title": "[core] Classes to hooks",
      "url": "https://github.com/mui/material-ui/pull/17061",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-20 00:39:12",
      "labels": [
        "component: app bar",
        "docs",
      ],
      "mergedAt": "2019-08-21 17:50:25",
      "number": 17062,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[AppBar] Add back to top demo",
      "url": "https://github.com/mui/material-ui/pull/17062",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mbrookes",
        "mui-pr-bot",
        "nrkroeker",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-20 00:40:12",
      "labels": [
        "component: divider",
        "new feature",
      ],
      "mergedAt": "2019-08-20 18:18:57",
      "number": 17063,
      "reviewers": [
        "sakulstra",
      ],
      "targetBranch": "master",
      "title": "[Divider] Add vertical support",
      "url": "https://github.com/mui/material-ui/pull/17063",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-21 08:28:43",
      "labels": [
        "component: tree view",
        "new feature",
      ],
      "mergedAt": "2019-08-22 17:27:51",
      "number": 17080,
      "reviewers": [
        "joshwooding",
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[TreeView] Support node label",
      "url": "https://github.com/mui/material-ui/pull/17080",
    },
    {
      "author": "oliviertassinari",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-27 19:30:38",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-28 18:50:19",
      "number": 17198,
      "reviewers": [
        "eps1lon",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Better document the ref props in the API",
      "url": "https://github.com/mui/material-ui/pull/17198",
    },
  ],
  "userParticipatedPRList": [
    {
      "author": "Patil2099",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-20 00:14:49",
      "labels": [
        "component: tooltip",
        "docs",
      ],
      "mergedAt": "2019-08-20 18:06:22",
      "number": 17058,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Tooltip] Improve arrow demo",
      "url": "https://github.com/mui/material-ui/pull/17058",
    },
    {
      "author": "zekehernandez",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-21 00:11:25",
      "labels": [
        "component: list",
        "docs",
      ],
      "mergedAt": "2019-08-21 17:49:53",
      "number": 17074,
      "reviewers": [
        "joshwooding",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Migration guide to v4: include change to dense Lists",
      "url": "https://github.com/mui/material-ui/pull/17074",
    },
    {
      "author": "netochaves",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-21 06:34:57",
      "labels": [
        "component: rating",
        "docs",
      ],
      "mergedAt": "2019-08-22 17:27:19",
      "number": 17078,
      "reviewers": [
        "joshwooding",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Rating] Add Custom prop-type to prop name",
      "url": "https://github.com/mui/material-ui/pull/17078",
    },
    {
      "author": "devsumanmdn",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-21 11:32:24",
      "labels": [
        "component: CircularProgress",
        "component: progress",
        "new feature",
      ],
      "mergedAt": "2019-08-22 17:26:56",
      "number": 17081,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[CircularProgress] Document String format for size prop",
      "url": "https://github.com/mui/material-ui/pull/17081",
    },
    {
      "author": "elmeerr",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-21 20:45:49",
      "labels": [
        "bug 🐛",
        "component: slider",
      ],
      "mergedAt": "2019-08-22 02:32:44",
      "number": 17085,
      "reviewers": [
        "joshwooding",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Slider] Avoid mutating user's value prop",
      "url": "https://github.com/mui/material-ui/pull/17085",
    },
    {
      "author": "ZachStoltz",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-22 01:39:07",
      "labels": [
        "bug 🐛",
        "component: drawer",
      ],
      "mergedAt": "2019-08-22 02:31:38",
      "number": 17091,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Drawer] Fix ref forwarding when variant="persistent"",
      "url": "https://github.com/mui/material-ui/pull/17091",
    },
    {
      "author": "cmeeren",
      "comments": [
        "cmeeren",
        "merceyz",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-22 02:33:55",
      "labels": [
        "component: rating",
        "docs",
      ],
      "mergedAt": "2019-08-22 17:26:24",
      "number": 17093,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Rating] Improve signature in docs",
      "url": "https://github.com/mui/material-ui/pull/17093",
    },
    {
      "author": "rbrishabh",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-22 03:15:53",
      "labels": [
        "bug 🐛",
        "component: switch",
      ],
      "mergedAt": "2019-08-22 17:28:08",
      "number": 17095,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Switch] Fix rendering in IE 11 and Safari",
      "url": "https://github.com/mui/material-ui/pull/17095",
    },
    {
      "author": "netochaves",
      "comments": [
        "mui-pr-bot",
        "netochaves",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-22 06:20:53",
      "labels": [
        "bug 🐛",
        "component: Popover",
      ],
      "mergedAt": "2019-08-23 17:38:33",
      "number": 17097,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Popover] Fix update position action",
      "url": "https://github.com/mui/material-ui/pull/17097",
    },
    {
      "author": "JapuDCret",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-22 21:12:03",
      "labels": [
        "component: menu",
        "typescript",
      ],
      "mergedAt": "2019-08-24 07:24:26",
      "number": 17103,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[MenuItem] Add missing dense classkey",
      "url": "https://github.com/mui/material-ui/pull/17103",
    },
    {
      "author": "spaceexperiment",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-22 21:52:42",
      "labels": [
        "component: Popper",
      ],
      "mergedAt": "2019-08-23 17:33:03",
      "number": 17104,
      "reviewers": [
        "adamdicarlo",
        "behnammodi",
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Fix popover demo event.target is null",
      "url": "https://github.com/mui/material-ui/pull/17104",
    },
    {
      "author": "behnammodi",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-23 02:08:26",
      "labels": [
        "component: drawer",
      ],
      "mergedAt": "Not merged yet",
      "number": 17108,
      "reviewers": [],
      "targetBranch": "master",
      "title": "improve sample code",
      "url": "https://github.com/mui/material-ui/pull/17108",
    },
    {
      "author": "ryanburr",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
        "ryanburr",
      ],
      "createdAt": "2019-08-23 02:17:19",
      "labels": [
        "bug 🐛",
        "component: ButtonGroup",
      ],
      "mergedAt": "2019-08-24 07:27:39",
      "number": 17109,
      "reviewers": [
        "behnammodi",
        "oliviertassinari",
        "ryanburr",
      ],
      "targetBranch": "master",
      "title": "[ButtonGroup] Fix border color when disabled and contained",
      "url": "https://github.com/mui/material-ui/pull/17109",
    },
    {
      "author": "behnammodi",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-23 04:28:13",
      "labels": [
        "docs",
      ],
      "mergedAt": "Not merged yet",
      "number": 17114,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Improve drawer sample code",
      "url": "https://github.com/mui/material-ui/pull/17114",
    },
    {
      "author": "dominictwlee",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-23 04:40:01",
      "labels": [
        "component: backdrop",
        "new feature",
      ],
      "mergedAt": "2019-08-23 17:44:32",
      "number": 17115,
      "reviewers": [
        "behnammodi",
        "dominictwlee",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Backdrop] Render children inside div",
      "url": "https://github.com/mui/material-ui/pull/17115",
    },
    {
      "author": "behnammodi",
      "comments": [
        "behnammodi",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-23 08:01:25",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-24 07:37:39",
      "number": 17118,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Improve custom styles of the demos",
      "url": "https://github.com/mui/material-ui/pull/17118",
    },
    {
      "author": "Shubhamchinda",
      "comments": [
        "Shubhamchinda",
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-23 14:38:32",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-24 07:28:28",
      "number": 17120,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Fix edit dependencies extraction ",
      "url": "https://github.com/mui/material-ui/pull/17120",
    },
    {
      "author": "Shubhamchinda",
      "comments": [
        "Shubhamchinda",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-23 19:43:50",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-23 20:27:28",
      "number": 17122,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Fix typo in modal demo",
      "url": "https://github.com/mui/material-ui/pull/17122",
    },
    {
      "author": "zekehernandez",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-24 01:01:32",
      "labels": [
        "bug 🐛",
        "component: Popover",
      ],
      "mergedAt": "2019-08-24 07:47:21",
      "number": 17128,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Popover] Fix anchorEl positioning within popup window",
      "url": "https://github.com/mui/material-ui/pull/17128",
    },
    {
      "author": "cmeeren",
      "comments": [
        "cmeeren",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-24 17:50:24",
      "labels": [
        "component: radio",
        "new feature",
      ],
      "mergedAt": "2019-08-25 20:44:38",
      "number": 17132,
      "reviewers": [
        "cmeeren",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[RadioGroup] Make value accept any",
      "url": "https://github.com/mui/material-ui/pull/17132",
    },
    {
      "author": "Janpot",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-24 23:33:52",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-27 01:18:33",
      "number": 17133,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[examples] Fix warning in next.js example",
      "url": "https://github.com/mui/material-ui/pull/17133",
    },
    {
      "author": "egerardus",
      "comments": [
        "egerardus",
        "mbrookes",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-25 06:27:15",
      "labels": [
        "component: table",
        "new feature",
      ],
      "mergedAt": "2019-08-28 23:02:27",
      "number": 17139,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Table] Add sticky header support",
      "url": "https://github.com/mui/material-ui/pull/17139",
    },
    {
      "author": "keiohtani",
      "comments": [
        "keiohtani",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-25 18:51:28",
      "labels": [
        "component: table",
        "docs",
      ],
      "mergedAt": "2019-08-27 01:19:35",
      "number": 17141,
      "reviewers": [
        "keiohtani",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Improve enhanced table variable name",
      "url": "https://github.com/mui/material-ui/pull/17141",
    },
    {
      "author": "lookfirst",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-26 15:02:50",
      "labels": [
        "docs",
      ],
      "mergedAt": "Not merged yet",
      "number": 17143,
      "reviewers": [
        "eps1lon",
        "lookfirst",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] minimizing bundle: simplify by using craco",
      "url": "https://github.com/mui/material-ui/pull/17143",
    },
    {
      "author": "kiransiluveru",
      "comments": [
        "eps1lon",
        "mui-pr-bot",
        "skirankumar7",
      ],
      "createdAt": "2019-08-26 22:54:44",
      "labels": [
        "bug 🐛",
        "component: tooltip",
      ],
      "mergedAt": "2019-08-27 17:15:28",
      "number": 17174,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Tooltip] Fix interactive + enterDelay combination",
      "url": "https://github.com/mui/material-ui/pull/17174",
    },
    {
      "author": "saltyshiomix",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
        "saltyshiomix",
      ],
      "createdAt": "2019-08-27 01:06:18",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-27 01:15:54",
      "number": 17181,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[examples] Fix warnings Container in _app.js with Next.js ",
      "url": "https://github.com/mui/material-ui/pull/17181",
    },
    {
      "author": "simshaun",
      "comments": [
        "mbrookes",
        "mui-pr-bot",
        "oliviertassinari",
        "simshaun",
      ],
      "createdAt": "2019-08-27 04:18:34",
      "labels": [
        "component: toggle button",
        "new feature",
      ],
      "mergedAt": "2019-08-28 18:52:36",
      "number": 17187,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[ToggleButton] Improve customizability",
      "url": "https://github.com/mui/material-ui/pull/17187",
    },
    {
      "author": "skube",
      "comments": [
        "mbrookes",
        "mui-pr-bot",
        "oliviertassinari",
        "skube",
      ],
      "createdAt": "2019-08-27 05:55:22",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-27 06:46:30",
      "number": 17189,
      "reviewers": [],
      "targetBranch": "master",
      "title": "[docs] Missing degree/option symbol",
      "url": "https://github.com/mui/material-ui/pull/17189",
    },
    {
      "author": "elmeerr",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-27 14:45:05",
      "labels": [
        "component: text field",
        "new feature",
      ],
      "mergedAt": "2019-08-28 18:48:53",
      "number": 17192,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[TextField] Specs alignment",
      "url": "https://github.com/mui/material-ui/pull/17192",
    },
    {
      "author": "skube",
      "comments": [
        "merceyz",
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-27 21:41:59",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-28 18:51:08",
      "number": 17200,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Minor Update to remove "n°" notations",
      "url": "https://github.com/mui/material-ui/pull/17200",
    },
    {
      "author": "ahtcx",
      "comments": [
        "ahtcx",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-28 04:08:46",
      "labels": [
        "component: badge",
        "new feature",
      ],
      "mergedAt": "2019-08-31 20:47:36",
      "number": 17204,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Badge] Add alignment options to badges",
      "url": "https://github.com/mui/material-ui/pull/17204",
    },
    {
      "author": "rbrishabh",
      "comments": [
        "eps1lon",
        "mui-pr-bot",
        "oliviertassinari",
        "rbrishabh",
      ],
      "createdAt": "2019-08-28 04:18:34",
      "labels": [
        "component: menu",
        "typescript",
      ],
      "mergedAt": "2019-08-28 17:35:54",
      "number": 17205,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Menu] Include 'list' in class key",
      "url": "https://github.com/mui/material-ui/pull/17205",
    },
    {
      "author": "rbrishabh",
      "comments": [
        "eps1lon",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-28 04:27:05",
      "labels": [
        "component: Typography",
        "docs",
      ],
      "mergedAt": "2019-08-28 23:01:58",
      "number": 17206,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Typography] noWrap requires display block",
      "url": "https://github.com/mui/material-ui/pull/17206",
    },
    {
      "author": "rbrishabh",
      "comments": [
        "mui-pr-bot",
        "rbrishabh",
      ],
      "createdAt": "2019-08-28 04:33:57",
      "labels": [
        "package: system",
      ],
      "mergedAt": "Not merged yet",
      "number": 17207,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "Fix - boxShadow property is not flowing through",
      "url": "https://github.com/mui/material-ui/pull/17207",
    },
    {
      "author": "eps1lon",
      "comments": [
        "eps1lon",
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-28 21:05:39",
      "labels": [
        "bug 🐛",
        "typescript",
      ],
      "mergedAt": "2020-01-05 23:19:44",
      "number": 17211,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[core] Fix missing type peer deps",
      "url": "https://github.com/mui/material-ui/pull/17211",
    },
    {
      "author": "eps1lon",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-28 22:49:10",
      "labels": [
        "docs",
        "typescript",
      ],
      "mergedAt": "2019-08-30 06:49:50",
      "number": 17214,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Require less strict tsconfig",
      "url": "https://github.com/mui/material-ui/pull/17214",
    },
    {
      "author": "Shubhamchinda",
      "comments": [
        "Shubhamchinda",
        "eps1lon",
        "kamami",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-29 02:25:45",
      "labels": [
        "component: text field",
        "new feature",
      ],
      "mergedAt": "2019-08-30 06:51:06",
      "number": 17217,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[TextField] Update outlined label when prop changes",
      "url": "https://github.com/mui/material-ui/pull/17217",
    },
    {
      "author": "behnammodi",
      "comments": [
        "behnammodi",
        "eps1lon",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-29 03:05:54",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-30 16:07:35",
      "number": 17218,
      "reviewers": [
        "eps1lon",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[docs] Improve style of the demos",
      "url": "https://github.com/mui/material-ui/pull/17218",
    },
    {
      "author": "ahtcx",
      "comments": [
        "ahtcx",
        "mbrookes",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-29 03:15:34",
      "labels": [
        "accessibility",
        "component: LinearProgress",
        "component: progress",
      ],
      "mergedAt": "2019-08-31 20:56:37",
      "number": 17219,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[LinearProgress] Make color adapt to theme type",
      "url": "https://github.com/mui/material-ui/pull/17219",
    },
    {
      "author": "stasiukanya",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
        "redblue9771",
        "stasiukanya",
      ],
      "createdAt": "2019-08-29 05:36:00",
      "labels": [
        "bug 🐛",
      ],
      "mergedAt": "2019-08-30 16:06:09",
      "number": 17221,
      "reviewers": [],
      "targetBranch": "master",
      "title": "[CardActionArea] Fix 'border-radius'",
      "url": "https://github.com/mui/material-ui/pull/17221",
    },
    {
      "author": "jasonkylefrank",
      "comments": [
        "mui-pr-bot",
      ],
      "createdAt": "2019-08-30 05:11:37",
      "labels": [
        "docs",
      ],
      "mergedAt": "2019-08-30 16:05:33",
      "number": 17230,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Button] Fix typo in demo text",
      "url": "https://github.com/mui/material-ui/pull/17230",
    },
    {
      "author": "sakulstra",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-30 15:55:17",
      "labels": [
        "component: button",
      ],
      "mergedAt": "2019-08-30 16:09:44",
      "number": 17232,
      "reviewers": [
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Button] Remove code leftover from < v4",
      "url": "https://github.com/mui/material-ui/pull/17232",
    },
    {
      "author": "city41",
      "comments": [
        "angel-langdon",
        "city41",
        "eps1lon",
        "mbrookes",
        "mui-pr-bot",
        "oliviertassinari",
      ],
      "createdAt": "2019-08-31 01:22:21",
      "labels": [
        "accessibility",
        "component: slider",
      ],
      "mergedAt": "2019-09-02 21:53:50",
      "number": 17240,
      "reviewers": [
        "city41",
        "eps1lon",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Slider] Add getAriaLabel prop",
      "url": "https://github.com/mui/material-ui/pull/17240",
    },
    {
      "author": "mbrookes",
      "comments": [
        "mui-pr-bot",
        "oliviertassinari",
        "skirunman",
      ],
      "createdAt": "2019-08-31 22:29:00",
      "labels": [
        "component: badge",
        "new feature",
      ],
      "mergedAt": "2019-09-01 18:30:16",
      "number": 17247,
      "reviewers": [
        "mbrookes",
        "oliviertassinari",
      ],
      "targetBranch": "master",
      "title": "[Badge] Improve shape of 2 digit badge",
      "url": "https://github.com/mui/material-ui/pull/17247",
    },
  ],
}
`;

exports[`getUserParticipatedPRListInPeriod > returns pull requests the user has participated in (via comments or reviews) within the specified period 1`] = `
[
  {
    "author": "Patil2099",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-20 00:14:49",
    "labels": [
      "component: tooltip",
      "docs",
    ],
    "mergedAt": "2019-08-20 18:06:22",
    "number": 17058,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Tooltip] Improve arrow demo",
    "url": "https://github.com/mui/material-ui/pull/17058",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-20 00:27:07",
    "labels": [
      "component: modal",
      "docs",
    ],
    "mergedAt": "2019-08-21 17:53:23",
    "number": 17059,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Modal] Add transition documentation",
    "url": "https://github.com/mui/material-ui/pull/17059",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-20 00:39:12",
    "labels": [
      "component: app bar",
      "docs",
    ],
    "mergedAt": "2019-08-21 17:50:25",
    "number": 17062,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[AppBar] Add back to top demo",
    "url": "https://github.com/mui/material-ui/pull/17062",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mbrookes",
      "mui-pr-bot",
      "nrkroeker",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-20 00:40:12",
    "labels": [
      "component: divider",
      "new feature",
    ],
    "mergedAt": "2019-08-20 18:18:57",
    "number": 17063,
    "reviewers": [
      "sakulstra",
    ],
    "targetBranch": "master",
    "title": "[Divider] Add vertical support",
    "url": "https://github.com/mui/material-ui/pull/17063",
  },
  {
    "author": "zekehernandez",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-21 00:11:25",
    "labels": [
      "component: list",
      "docs",
    ],
    "mergedAt": "2019-08-21 17:49:53",
    "number": 17074,
    "reviewers": [
      "joshwooding",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Migration guide to v4: include change to dense Lists",
    "url": "https://github.com/mui/material-ui/pull/17074",
  },
  {
    "author": "netochaves",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-21 06:34:57",
    "labels": [
      "component: rating",
      "docs",
    ],
    "mergedAt": "2019-08-22 17:27:19",
    "number": 17078,
    "reviewers": [
      "joshwooding",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Rating] Add Custom prop-type to prop name",
    "url": "https://github.com/mui/material-ui/pull/17078",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-21 08:28:43",
    "labels": [
      "component: tree view",
      "new feature",
    ],
    "mergedAt": "2019-08-22 17:27:51",
    "number": 17080,
    "reviewers": [
      "joshwooding",
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[TreeView] Support node label",
    "url": "https://github.com/mui/material-ui/pull/17080",
  },
  {
    "author": "devsumanmdn",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-21 11:32:24",
    "labels": [
      "component: CircularProgress",
      "component: progress",
      "new feature",
    ],
    "mergedAt": "2019-08-22 17:26:56",
    "number": 17081,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[CircularProgress] Document String format for size prop",
    "url": "https://github.com/mui/material-ui/pull/17081",
  },
  {
    "author": "elmeerr",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-21 20:45:49",
    "labels": [
      "bug 🐛",
      "component: slider",
    ],
    "mergedAt": "2019-08-22 02:32:44",
    "number": 17085,
    "reviewers": [
      "joshwooding",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Slider] Avoid mutating user's value prop",
    "url": "https://github.com/mui/material-ui/pull/17085",
  },
  {
    "author": "ZachStoltz",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-22 01:39:07",
    "labels": [
      "bug 🐛",
      "component: drawer",
    ],
    "mergedAt": "2019-08-22 02:31:38",
    "number": 17091,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Drawer] Fix ref forwarding when variant="persistent"",
    "url": "https://github.com/mui/material-ui/pull/17091",
  },
  {
    "author": "cmeeren",
    "comments": [
      "cmeeren",
      "merceyz",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-22 02:33:55",
    "labels": [
      "component: rating",
      "docs",
    ],
    "mergedAt": "2019-08-22 17:26:24",
    "number": 17093,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Rating] Improve signature in docs",
    "url": "https://github.com/mui/material-ui/pull/17093",
  },
  {
    "author": "rbrishabh",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-22 03:15:53",
    "labels": [
      "bug 🐛",
      "component: switch",
    ],
    "mergedAt": "2019-08-22 17:28:08",
    "number": 17095,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Switch] Fix rendering in IE 11 and Safari",
    "url": "https://github.com/mui/material-ui/pull/17095",
  },
  {
    "author": "netochaves",
    "comments": [
      "mui-pr-bot",
      "netochaves",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-22 06:20:53",
    "labels": [
      "bug 🐛",
      "component: Popover",
    ],
    "mergedAt": "2019-08-23 17:38:33",
    "number": 17097,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Popover] Fix update position action",
    "url": "https://github.com/mui/material-ui/pull/17097",
  },
  {
    "author": "JapuDCret",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-22 21:12:03",
    "labels": [
      "component: menu",
      "typescript",
    ],
    "mergedAt": "2019-08-24 07:24:26",
    "number": 17103,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[MenuItem] Add missing dense classkey",
    "url": "https://github.com/mui/material-ui/pull/17103",
  },
  {
    "author": "spaceexperiment",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-22 21:52:42",
    "labels": [
      "component: Popper",
    ],
    "mergedAt": "2019-08-23 17:33:03",
    "number": 17104,
    "reviewers": [
      "adamdicarlo",
      "behnammodi",
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Fix popover demo event.target is null",
    "url": "https://github.com/mui/material-ui/pull/17104",
  },
  {
    "author": "behnammodi",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-23 02:08:26",
    "labels": [
      "component: drawer",
    ],
    "mergedAt": "Not merged yet",
    "number": 17108,
    "reviewers": [],
    "targetBranch": "master",
    "title": "improve sample code",
    "url": "https://github.com/mui/material-ui/pull/17108",
  },
  {
    "author": "ryanburr",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
      "ryanburr",
    ],
    "createdAt": "2019-08-23 02:17:19",
    "labels": [
      "bug 🐛",
      "component: ButtonGroup",
    ],
    "mergedAt": "2019-08-24 07:27:39",
    "number": 17109,
    "reviewers": [
      "behnammodi",
      "oliviertassinari",
      "ryanburr",
    ],
    "targetBranch": "master",
    "title": "[ButtonGroup] Fix border color when disabled and contained",
    "url": "https://github.com/mui/material-ui/pull/17109",
  },
  {
    "author": "behnammodi",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-23 04:28:13",
    "labels": [
      "docs",
    ],
    "mergedAt": "Not merged yet",
    "number": 17114,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Improve drawer sample code",
    "url": "https://github.com/mui/material-ui/pull/17114",
  },
  {
    "author": "dominictwlee",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-23 04:40:01",
    "labels": [
      "component: backdrop",
      "new feature",
    ],
    "mergedAt": "2019-08-23 17:44:32",
    "number": 17115,
    "reviewers": [
      "behnammodi",
      "dominictwlee",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Backdrop] Render children inside div",
    "url": "https://github.com/mui/material-ui/pull/17115",
  },
  {
    "author": "behnammodi",
    "comments": [
      "behnammodi",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-23 08:01:25",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-24 07:37:39",
    "number": 17118,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Improve custom styles of the demos",
    "url": "https://github.com/mui/material-ui/pull/17118",
  },
  {
    "author": "Shubhamchinda",
    "comments": [
      "Shubhamchinda",
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-23 14:38:32",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-24 07:28:28",
    "number": 17120,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Fix edit dependencies extraction ",
    "url": "https://github.com/mui/material-ui/pull/17120",
  },
  {
    "author": "Shubhamchinda",
    "comments": [
      "Shubhamchinda",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-23 19:43:50",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-23 20:27:28",
    "number": 17122,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Fix typo in modal demo",
    "url": "https://github.com/mui/material-ui/pull/17122",
  },
  {
    "author": "zekehernandez",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-24 01:01:32",
    "labels": [
      "bug 🐛",
      "component: Popover",
    ],
    "mergedAt": "2019-08-24 07:47:21",
    "number": 17128,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Popover] Fix anchorEl positioning within popup window",
    "url": "https://github.com/mui/material-ui/pull/17128",
  },
  {
    "author": "cmeeren",
    "comments": [
      "cmeeren",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-24 17:50:24",
    "labels": [
      "component: radio",
      "new feature",
    ],
    "mergedAt": "2019-08-25 20:44:38",
    "number": 17132,
    "reviewers": [
      "cmeeren",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[RadioGroup] Make value accept any",
    "url": "https://github.com/mui/material-ui/pull/17132",
  },
  {
    "author": "Janpot",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-24 23:33:52",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-27 01:18:33",
    "number": 17133,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[examples] Fix warning in next.js example",
    "url": "https://github.com/mui/material-ui/pull/17133",
  },
  {
    "author": "egerardus",
    "comments": [
      "egerardus",
      "mbrookes",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-25 06:27:15",
    "labels": [
      "component: table",
      "new feature",
    ],
    "mergedAt": "2019-08-28 23:02:27",
    "number": 17139,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Table] Add sticky header support",
    "url": "https://github.com/mui/material-ui/pull/17139",
  },
  {
    "author": "keiohtani",
    "comments": [
      "keiohtani",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-25 18:51:28",
    "labels": [
      "component: table",
      "docs",
    ],
    "mergedAt": "2019-08-27 01:19:35",
    "number": 17141,
    "reviewers": [
      "keiohtani",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Improve enhanced table variable name",
    "url": "https://github.com/mui/material-ui/pull/17141",
  },
  {
    "author": "lookfirst",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-26 15:02:50",
    "labels": [
      "docs",
    ],
    "mergedAt": "Not merged yet",
    "number": 17143,
    "reviewers": [
      "eps1lon",
      "lookfirst",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] minimizing bundle: simplify by using craco",
    "url": "https://github.com/mui/material-ui/pull/17143",
  },
  {
    "author": "kiransiluveru",
    "comments": [
      "eps1lon",
      "mui-pr-bot",
      "skirankumar7",
    ],
    "createdAt": "2019-08-26 22:54:44",
    "labels": [
      "bug 🐛",
      "component: tooltip",
    ],
    "mergedAt": "2019-08-27 17:15:28",
    "number": 17174,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Tooltip] Fix interactive + enterDelay combination",
    "url": "https://github.com/mui/material-ui/pull/17174",
  },
  {
    "author": "saltyshiomix",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
      "saltyshiomix",
    ],
    "createdAt": "2019-08-27 01:06:18",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-27 01:15:54",
    "number": 17181,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[examples] Fix warnings Container in _app.js with Next.js ",
    "url": "https://github.com/mui/material-ui/pull/17181",
  },
  {
    "author": "simshaun",
    "comments": [
      "mbrookes",
      "mui-pr-bot",
      "oliviertassinari",
      "simshaun",
    ],
    "createdAt": "2019-08-27 04:18:34",
    "labels": [
      "component: toggle button",
      "new feature",
    ],
    "mergedAt": "2019-08-28 18:52:36",
    "number": 17187,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[ToggleButton] Improve customizability",
    "url": "https://github.com/mui/material-ui/pull/17187",
  },
  {
    "author": "skube",
    "comments": [
      "mbrookes",
      "mui-pr-bot",
      "oliviertassinari",
      "skube",
    ],
    "createdAt": "2019-08-27 05:55:22",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-27 06:46:30",
    "number": 17189,
    "reviewers": [],
    "targetBranch": "master",
    "title": "[docs] Missing degree/option symbol",
    "url": "https://github.com/mui/material-ui/pull/17189",
  },
  {
    "author": "elmeerr",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-27 14:45:05",
    "labels": [
      "component: text field",
      "new feature",
    ],
    "mergedAt": "2019-08-28 18:48:53",
    "number": 17192,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[TextField] Specs alignment",
    "url": "https://github.com/mui/material-ui/pull/17192",
  },
  {
    "author": "oliviertassinari",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-27 19:30:38",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-28 18:50:19",
    "number": 17198,
    "reviewers": [
      "eps1lon",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Better document the ref props in the API",
    "url": "https://github.com/mui/material-ui/pull/17198",
  },
  {
    "author": "skube",
    "comments": [
      "merceyz",
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-27 21:41:59",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-28 18:51:08",
    "number": 17200,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Minor Update to remove "n°" notations",
    "url": "https://github.com/mui/material-ui/pull/17200",
  },
  {
    "author": "ahtcx",
    "comments": [
      "ahtcx",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-28 04:08:46",
    "labels": [
      "component: badge",
      "new feature",
    ],
    "mergedAt": "2019-08-31 20:47:36",
    "number": 17204,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Badge] Add alignment options to badges",
    "url": "https://github.com/mui/material-ui/pull/17204",
  },
  {
    "author": "rbrishabh",
    "comments": [
      "eps1lon",
      "mui-pr-bot",
      "oliviertassinari",
      "rbrishabh",
    ],
    "createdAt": "2019-08-28 04:18:34",
    "labels": [
      "component: menu",
      "typescript",
    ],
    "mergedAt": "2019-08-28 17:35:54",
    "number": 17205,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Menu] Include 'list' in class key",
    "url": "https://github.com/mui/material-ui/pull/17205",
  },
  {
    "author": "rbrishabh",
    "comments": [
      "eps1lon",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-28 04:27:05",
    "labels": [
      "component: Typography",
      "docs",
    ],
    "mergedAt": "2019-08-28 23:01:58",
    "number": 17206,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Typography] noWrap requires display block",
    "url": "https://github.com/mui/material-ui/pull/17206",
  },
  {
    "author": "rbrishabh",
    "comments": [
      "mui-pr-bot",
      "rbrishabh",
    ],
    "createdAt": "2019-08-28 04:33:57",
    "labels": [
      "package: system",
    ],
    "mergedAt": "Not merged yet",
    "number": 17207,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "Fix - boxShadow property is not flowing through",
    "url": "https://github.com/mui/material-ui/pull/17207",
  },
  {
    "author": "eps1lon",
    "comments": [
      "eps1lon",
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-28 21:05:39",
    "labels": [
      "bug 🐛",
      "typescript",
    ],
    "mergedAt": "2020-01-05 23:19:44",
    "number": 17211,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[core] Fix missing type peer deps",
    "url": "https://github.com/mui/material-ui/pull/17211",
  },
  {
    "author": "eps1lon",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-28 22:49:10",
    "labels": [
      "docs",
      "typescript",
    ],
    "mergedAt": "2019-08-30 06:49:50",
    "number": 17214,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Require less strict tsconfig",
    "url": "https://github.com/mui/material-ui/pull/17214",
  },
  {
    "author": "Shubhamchinda",
    "comments": [
      "Shubhamchinda",
      "eps1lon",
      "kamami",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-29 02:25:45",
    "labels": [
      "component: text field",
      "new feature",
    ],
    "mergedAt": "2019-08-30 06:51:06",
    "number": 17217,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[TextField] Update outlined label when prop changes",
    "url": "https://github.com/mui/material-ui/pull/17217",
  },
  {
    "author": "behnammodi",
    "comments": [
      "behnammodi",
      "eps1lon",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-29 03:05:54",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-30 16:07:35",
    "number": 17218,
    "reviewers": [
      "eps1lon",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[docs] Improve style of the demos",
    "url": "https://github.com/mui/material-ui/pull/17218",
  },
  {
    "author": "ahtcx",
    "comments": [
      "ahtcx",
      "mbrookes",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-29 03:15:34",
    "labels": [
      "accessibility",
      "component: LinearProgress",
      "component: progress",
    ],
    "mergedAt": "2019-08-31 20:56:37",
    "number": 17219,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[LinearProgress] Make color adapt to theme type",
    "url": "https://github.com/mui/material-ui/pull/17219",
  },
  {
    "author": "stasiukanya",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
      "redblue9771",
      "stasiukanya",
    ],
    "createdAt": "2019-08-29 05:36:00",
    "labels": [
      "bug 🐛",
    ],
    "mergedAt": "2019-08-30 16:06:09",
    "number": 17221,
    "reviewers": [],
    "targetBranch": "master",
    "title": "[CardActionArea] Fix 'border-radius'",
    "url": "https://github.com/mui/material-ui/pull/17221",
  },
  {
    "author": "jasonkylefrank",
    "comments": [
      "mui-pr-bot",
    ],
    "createdAt": "2019-08-30 05:11:37",
    "labels": [
      "docs",
    ],
    "mergedAt": "2019-08-30 16:05:33",
    "number": 17230,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Button] Fix typo in demo text",
    "url": "https://github.com/mui/material-ui/pull/17230",
  },
  {
    "author": "sakulstra",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-30 15:55:17",
    "labels": [
      "component: button",
    ],
    "mergedAt": "2019-08-30 16:09:44",
    "number": 17232,
    "reviewers": [
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Button] Remove code leftover from < v4",
    "url": "https://github.com/mui/material-ui/pull/17232",
  },
  {
    "author": "city41",
    "comments": [
      "angel-langdon",
      "city41",
      "eps1lon",
      "mbrookes",
      "mui-pr-bot",
      "oliviertassinari",
    ],
    "createdAt": "2019-08-31 01:22:21",
    "labels": [
      "accessibility",
      "component: slider",
    ],
    "mergedAt": "2019-09-02 21:53:50",
    "number": 17240,
    "reviewers": [
      "city41",
      "eps1lon",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Slider] Add getAriaLabel prop",
    "url": "https://github.com/mui/material-ui/pull/17240",
  },
  {
    "author": "mbrookes",
    "comments": [
      "mui-pr-bot",
      "oliviertassinari",
      "skirunman",
    ],
    "createdAt": "2019-08-31 22:29:00",
    "labels": [
      "component: badge",
      "new feature",
    ],
    "mergedAt": "2019-09-01 18:30:16",
    "number": 17247,
    "reviewers": [
      "mbrookes",
      "oliviertassinari",
    ],
    "targetBranch": "master",
    "title": "[Badge] Improve shape of 2 digit badge",
    "url": "https://github.com/mui/material-ui/pull/17247",
  },
]
`;
